2003-10-23  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Makefile.am: Removed GTK_DISABLE_DEPRECATED flag until
	the porting is done. Fixes bug #124630. 

2003-10-09  Kjartan Maraas  <kmaraas@gnome.org>

	* wireless-applet.c: (wireless_applet_destroy),
	(wireless_applet_new): Merge fix for bug #124151 from
	stable.

2003-09-23  Muktha  <muktha.narayan@wipro.com>

	* Provided Help in the applet's context menu and the prefences
	  dialog. Fixes bug #122092.

Mon Sep 15 15:13:29 2003  George Lebl <jirka@5z.com>

	* wireless-applet.c: When started in locked down mode, hide
	  the preferences item

2003-08-22  Breda McColgan  <breda.mccolgan@sun.com>

	* wireless/docs/C/wireless.xml: updated references to figures
	* wireless/docs/C/wireless-C.omf: updated date and version number
	* wireless/docs/C/l10n.txt: updated references to figures
	* wireless/docs/C/figures/wireless_applet.png: deleted this file
	* wireless/docs/C/figures/wireless_applet_conn.png: added this file
	* wireless/docs/C/figures/wireless_applet_no_conn.png: added this file

2003-08-10  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (wireless_applet_draw): make the applet have the
	right display straight away, left-overs from the GNOME1 applet...

2003-08-07  Bastien Nocera  <hadess@hadess.net>

	* wireless-applet.c: (setup_widgets), (change_size_cb),
	(change_orient_cb), (wireless_applet_new): make sure the pixmap
	is updated when changing the panel's orientation or size

2003-08-07  Breda McColgan  <breda.mccolgan@sun.com>

	* wireless/docs: created this new directory for GNOME 2.4
	* wireless/docs/C: created this new directory for GNOME 2.4
	* wireless/docs/C/figures: created this new directory for GNOME 2.4
	* wireless/docs/C/wireless.xml: created this new file for GNOME 2.4
	* wireless/docs/C/wireless-C.omf: created this new file for GNOME 2.4
	* wireless/docs/C/legal.xml: added this new file for GNOME 2.4
	* wireless/docs/C/l10n.txt: created this new file for GNOME 2.4