@@ -1,3 +1,9 @@
+2004-01-12  Leena Gunda  <leena.gunda@wipro.com>
+
+	* wireless-applet.c: (wireless_applet_new)
+	Set the accessible name and description.
+	Fixes bug #128262.
+
 2003-10-23  Kaushal Kumar  <kaushal.kumar@wipro.com>
 
 	* Makefile.am: Removed GTK_DISABLE_DEPRECATED flag until
